# SimpleTest

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
CMake/: Settings.cmake  Utilities.cmake
Example/: CMakeLists.txt  Failed.cpp  Fixture.cpp  FloatingPoint.cpp  Main.cpp  Math.cpp  String.cpp
Scripts/: build-linux.sh  build-windows.bat
Source/: CMakeLists.txt  Main.cpp
Source/SimpleTest/: ConsoleReporter.cpp  ConsoleReporter.hpp  Reporter.hpp  SimpleTest.cpp  SimpleTest.hpp  SimpleTestMain.cpp  Style.cpp  Style.hpp  TestCase.cpp  TestCase.hpp  TestMacros.cpp  TestMacros.hpp  TestRunner.cpp  TestRunner.hpp  TestSuite.cpp  TestSuite.hpp  TestSummary.hpp  TextBuffer.cpp  TextBuffer.hpp  UnitTest.cpp  UnitTest.hpp
Source/SimpleTest/Internal/: Style.cpp  Style.hpp
